updates to address and customer dto with new fields and added JWT Filter